# LoopBench

./: .gitignore  .platform-pack-source  CONTRIBUTING.md  PLAN.md  PUBLISHING.md  README.md  SECURITY.md  STATUS.md  SUITE-OVERVIEW.md  SYNC.md  pyproject.toml  requirements.txt
.github/workflows/: leaderboard-pr-hint.yml  leaderboard-render.yml  leaderboard-validate.yml  pages.yml  publish.yml  suite-baselines.yml  sync-platform-pack.yml  test.yml
cli/: loopbench.py
docs/: LIVE_TIER.md  SIMENV_ROADMAP.md  index.html
docs/css/: site.css
docs/data/: leaderboard.json
docs/js/: site.js
leaderboard/: LIVE.md  README.md  ROW_SCHEMA.md  entries.json
loopbench/: __init__.py  __main__.py  cli.py  conformance.py  les_compute.py  runner.py  suites.py  tasks.py
metrics/: les-compute.md
scripts/: add_suite_baselines.py  generate_demo_gif.py  leaderboard_common.py  render_leaderboard.py  run_suite_baselines.py  sort_leaderboard.py
submissions/examples/: spec-fast-loop.yaml  spec-thorough-loop.yaml
submit/: schema.json
tasks/: index.yaml
tasks/LB-AUTO-1/: task.yaml
tasks/LB-BOOT-1/: task.yaml
tasks/LB-COMP-1/: task.yaml
tasks/LB-CR-1/: README.md  task.yaml
tasks/LB-CREW-1/: task.yaml
tasks/LB-GRAPH-1/: task.yaml
tasks/LB-HITL-1/: task.yaml
tasks/LB-MA-1/: README.md  task.yaml
tasks/LB-MEM-1/: task.yaml
tasks/LB-NEST-1/: task.yaml
tasks/LB-OPT-1/: task.yaml
tasks/LB-RAG-1/: task.yaml
tasks/LB-REACT-1/: task.yaml
tasks/LB-REFLEX-1/: task.yaml
tasks/LB-RS-1/: README.md  task.yaml
tasks/LB-SAFE-1/: task.yaml
tasks/LB-SIM-1/: task.yaml
tasks/LB-TOT-1/: task.yaml
tasks/LB-VOTE-1/: task.yaml
tasks/suites/: index.yaml
tests/: test_golden_submission.py  test_lss_and_tasks.py  test_suites.py
