[project]
name = "loopbench"
version = "0.1.0"
description = "LoopBench — benchmark suite, metrics, submission pipeline, leaderboards"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "PyYAML>=6.0",
    "jsonschema>=4.21",
]

[project.urls]
Homepage = "https://github.com/KanakMalpani/LoopBench"
Repository = "https://github.com/KanakMalpani/LoopBench"
Issues = "https://github.com/KanakMalpani/LoopBench/issues"
Documentation = "https://github.com/KanakMalpani/LoopBench/blob/main/SUITE-OVERVIEW.md"
"LoopGym" = "https://github.com/KanakMalpani/LoopGym"
"Loop Core Engineering" = "https://github.com/KanakMalpani/Loop-Core-Engineering"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
loopbench = "loopbench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["loopbench"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
