[project]
name = "loopbench"
version = "0.2.0"
description = "LoopBench — benchmark suite, metrics, submission pipeline, leaderboards"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Kanak Malpani" }]
keywords = ["loop-engineering", "loopbench", "benchmark", "les"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "PyYAML>=6.0",
    "jsonschema>=4.21",
]

[project.urls]
Homepage = "https://github.com/KanakMalpani/LoopBench"
Repository = "https://github.com/KanakMalpani/LoopBench"
Issues = "https://github.com/KanakMalpani/LoopBench/issues"
Documentation = "https://github.com/KanakMalpani/LoopBench/blob/main/SUITE-OVERVIEW.md"
"LoopGym" = "https://github.com/KanakMalpani/LoopGym"
"Loop Core Engineering" = "https://github.com/KanakMalpani/Loop-Core-Engineering"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
loopbench = "loopbench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["loopbench"]

[tool.hatch.build.targets.wheel.force-include]
"tasks" = "loopbench/tasks"
"submit/schema.json" = "loopbench/submit_schema.json"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
